# fluidsynth-midi-service-j

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: actions.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 1-das-stromreiters.mid
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: device_info.xml  midi_device_info.xml
docs/design/: BUILDING.md  fluidsynthjna.md
fluidsynth-assetloader-jna/: build.gradle
fluidsynth-jna/: build.gradle
fluidsynth-kt/: Makefile  build.gradle
fluidsynth-kt/src/main/: AndroidManifest.xml
fluidsynth-kt/src/main/cpp/: CMakeLists.txt  fluid_androidasset.c  fluid_androidasset.h
fluidsynth-kt/src/main/java/: NativeSize.kt
fluidsynth-kt/src/main/java/fluidsynth/: AudioDriver.kt  FluidsynthInteropException.kt  FluidsynthObject.kt  MidiDriver.kt  MidiEvent.kt  Settings.kt  SoundFont.kt  SoundFontLoader.kt  Synth.kt  Voice.kt
fluidsynth-kt/src/main/res/values/: strings.xml
fluidsynthjna/: .gitignore  Makefile  build.gradle
fluidsynthjna/dummy-amidi/: CMakeLists.txt  dummy.c  ext-build.sh
fluidsynthjna/src/main/: AndroidManifest.xml
fluidsynthjna/src/main/assets/: LICENSE
fluidsynthjna/src/main/java/fluidsynth/: AudioDriver.kt  MidiDriver.kt  Settings.kt  SoundFont.kt  SoundFontLoader.kt  Synth.kt
gradle/wrapper/: gradle-wrapper.properties
ktmidi/: build.gradle
ktmidi/src/main/: AndroidManifest.xml
(+66 files in other folders)
